Experiments with auto-generated artifacts

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 sudo: false
 python:
 - 2.7
+
 addons:
   apt:
     packages:
@@ -10,5 +11,13 @@ addons:
 
 install:
 - pip install xml2rfc
+
 script: 
 - make
+
+deploy:
+  file_glob: true
+  file: artifacts/*
+  skip_cleanup: true
+  overwrite: true
+  
