Adds GitHub Pages deploy rule to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,11 @@ install:
 
 script: 
 - make
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  on:
+    branch: gh_pages
+
