Tells Travis to build Master branch out to gh_pages

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,4 @@ deploy:
   skip_cleanup: true
   github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   on:
-    branch: gh_pages
-
+    branch: master
