--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ master ]
   pull_request:
-    types: [opened, sychronize, ready_for_review]
+    types: [opened, synchronize, ready_for_review]
 
 jobs:
   build-docker:
