Updates build instructions to use nist-pages branch

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -42,6 +42,7 @@ jobs:
       with:
         deploy_key: ${{ secrets.GH_DEPLOY_KEY }}
         publish_dir: documents
+        publish_branch: nist-pages
         force_orphan: true
         enable_jekyll: true
         user_name: ${{ github.actor }}
