Use latest version of metanorma docker container
Had been using an older version of the metanorma docker container (v1.4.12) until some bugs were fixed with the latest container version. Now experiencing an issue building some documents, so trying to switch to the latest version of the container to see if that will fix the issue.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build-docker:
     runs-on: ubuntu-latest
-    container: docker://metanorma/mn:1.4.12
+    container: docker://metanorma/mn
     steps:
       - uses: actions/checkout@v2
       - name: Install gems from local Gemfile
