--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,33 @@
 theme: jekyll-theme-slate
+title: ACVP
+description: Industry Working Group on Automated Cryptographic Algorithm Validation
+
+# TODO: Uncomment this block after merging into usnistgov/ACVP
+# url: https://pages.nist.gov
+# baseurl: "/ACVP" # the subpath of your site, e.g. "/blog"
+# repository: "usnistgov/ACVP"
+
+# This disables the "View on GitHub" button on the Slate theme
+github:
+  is_project_page: false
+
+# Reading Files
+# include:
+exclude:
+  - slides
+  - iev
+  - relaton
+  - Images
+  - src
+  - metanorma.yml
+
+plugins:
+- jekyll-coffeescript
+- jekyll-default-layout
+- jekyll-gist
+- jekyll-github-metadata
+- jekyll-optional-front-matter
+- jekyll-paginate
+- jekyll-readme-index
+- jekyll-titles-from-headings
+- jekyll-relative-links
