Updates docker-build.yml gh action version numbers

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     container: docker://metanorma/mn
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@master
       - name: Install gems from local Gemfile
         run: |
           curl -LO --retry 3 https://raw.githubusercontent.com/metanorma/metanorma-build-scripts/master/gemfile-to-bundle-add.sh | bash
@@ -34,7 +34,7 @@ jobs:
     needs: build-docker
     steps:
     - uses: actions/checkout@master
-    - uses: actions/download-artifact@v1
+    - uses: actions/download-artifact@master
       with:
         name: documents
     - name: Deploy to GH Pages
