troubleshooting deployment issues

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -34,9 +34,13 @@ jobs:
     needs: build-docker
     steps:
     - uses: actions/checkout@master
+    - name: Display file structure
+      run: ls -R
     - uses: actions/download-artifact@master
       with:
         name: documents
+    - name: Display file structure
+      run: ls -R
     - name: Deploy to GH Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
@@ -48,6 +52,8 @@ jobs:
         user_name: ${{ github.actor }}
         user_email: ${{ format('{0}@users.noreply.github.com', github.actor) }}
         commit_message: "${{ format('Deploy to GitHub Pages: {0}', github.sha) }}"
+    - name: Display file structure
+      run: ls -R
     - uses: kolpav/purge-artifacts-action@v1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
