adds docker-build.yml debugging statements and sets individual gh actions to known version numbers

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     container: docker://metanorma/mn
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v4
       - name: Install gems from local Gemfile
         run: |
           curl -LO --retry 3 https://raw.githubusercontent.com/metanorma/metanorma-build-scripts/master/gemfile-to-bundle-add.sh | bash
@@ -23,7 +23,7 @@ jobs:
         run: |
           make clean all publish
         working-directory: ./src
-      - uses: actions/upload-artifact@master
+      - uses: actions/upload-artifact@v4
         with:
           name: documents
           path: ./src/documents
@@ -33,10 +33,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-docker
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v4
     - name: Display file structure
       run: ls -R
-    - uses: actions/download-artifact@master
+    - name: Make a directory for the artifact
+      run: mkdir documents
+    - name: Discover the current directory
+      run: cd ~      
+    - name: Discover the current directory
+      run: pwd
+    - uses: actions/download-artifact@v4
       with:
         name: documents
     - name: Display file structure
