trying to get the artifact to download to the correct directory

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -45,7 +45,7 @@ jobs:
     - uses: actions/download-artifact@v4
       with:
         name: documents
-        path: ~/documents
+        path: documents
     - name: Display file structure
       run: ls -R
     - name: Deploy to GH Pages
