Adds ML-KEM, and some README/index.html updates for general usability

--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,7 @@ update:
 	bundle install
 
 clean:
-	rm -rf *.err *.html *.xml *.txt documents/
+	rm -rf *.err *.html *.xml *.txt *.abort documents/
 
 %.html %.txt: %.adoc
 	bundle exec metanorma compile $<
